--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -3,18 +3,18 @@
 The first thing we can do is run a function that will load the R packages needed for this code companion, and install them to our machine if they are not already.
 
 ```{r, packages, message = FALSE, warning = FALSE, error = FALSE}
-packages =  c('utils', 'tidyverse', 'downloadthis',     # packages for data management
-              'foreign', 'MplusAutomation',             # packages for writing data         
-              'sjPlot', 'broom', 'kableExtra',          # packages for generating tables
-              'nlme', 'lme4', 'lmerTest',               # packages for MLMs
-              'mgcv', 'gamm4',                          # packages for GAMMs
-              'lavaan',                                 # packages for SEMs
-              'ggplot2', 'semPlot')                     # packages for visualization                     
+packages <- c("utils", "tidyverse", "downloadthis",     # packages for data management
+              "foreign", "MplusAutomation",             # packages for writing data         
+              "sjPlot", "broom", "kableExtra",          # packages for generating tables
+              "nlme", "lme4", "lmerTest",               # packages for MLMs
+              "mgcv", "gamm4",                          # packages for GAMMs
+              "lavaan",                                 # packages for SEMs
+              "ggplot2", "semPlot")                     # packages for visualization                     
 
 if (length(setdiff(packages, rownames(installed.packages()))) > 0) {
   install.packages(setdiff(packages, 
                            rownames(installed.packages())), 
-                   repos = 'http://cran.us.r-project.org')
+                   repos = "http://cran.us.r-project.org")
 }
 invisible(lapply(packages, 
                  library, 
@@ -25,17 +25,17 @@ We have automatically generated a downloadable bibliography of the R package ver
 
 ```{r, write bibliography, message = FALSE, warning = FALSE, error = FALSE}
 knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'external/hitchhikers-guide-packages.bib')
+  .packages(), "bookdown", "knitr", "rmarkdown"
+), "external/hitchhikers-guide-packages.bib")
 ```
 ```{r, download external 01, message = FALSE, warning = FALSE, error = FALSE, echo = FALSE}
 download_file(
-  path = 'external/hitchhikers-guide-packages.bib',
-  output_name = 'hitchhikers-guide-packages',
-  button_label = 'Download Bibliography file',
-  button_type = 'default',
+  path = "external/hitchhikers-guide-packages.bib",
+  output_name = "hitchhikers-guide-packages",
+  button_label = "Download Bibliography file",
+  button_type = "default",
   has_icon = TRUE,
-  icon = 'fa fa-save',
+  icon = "fa fa-save",
   self_contained = FALSE
 )
 ```
