--- a/external/hitchhikers-guide-packages.bib
+++ b/external/hitchhikers-guide-packages.bib
@@ -219,6 +219,14 @@ Output},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
+@Manual{R-visreg,
+  title = {visreg: Visualization of Regression Models},
+  author = {Patrick Breheny and Woodrow Burchett},
+  year = {2020},
+  note = {R package version 2.7.0},
+  url = {http://pbreheny.github.io/visreg},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -381,5 +389,15 @@ likelihood estimation of semiparametric generalized linear models},
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
+}
+
+@Article{visreg2017,
+  author = {Patrick Breheny and Woodrow Burchett},
+  title = {Visualization of Regression Models Using visreg},
+  journal = {The R Journal},
+  year = {2017},
+  volume = {9},
+  pages = {56--71},
+  number = {2},
 }
 
