--- a/02-canonical.Rmd
+++ b/02-canonical.Rmd
@@ -18,7 +18,7 @@ feedback.learning <- read.csv("data/feedback-learning.csv") %>%
   select(id, age, modularity)
 ```
 
-While we will usually read in the wide and long versions of the data directly, here we will demonstrate how to reformat the more common wide data format (i.e., each row corresponds to a different individual and repeated measures are new variables) into the long data format (i.e., each row corresponds to a different repeated measure with multiple rows per person). We can use the `pivot_longer()` function from the [**tidyr**]() package (alternatives include `melt()` from the [**reshape**]() package). We will collect all the columns that begin with the string `dlpfc` and pass the values into one column, while creating a new column `wave` from their number indices (e.g., `1` for `dlpfc1`). We can then use the `mutate()` function from the [**dplyr**]() package to change the wave colum from a character to a numeric variable and subtract $1$ from every value so that the first wave is coded as $0$ (this will be important for interpretations later).
+While we will usually read in the wide and long versions of the data directly, here we will demonstrate how to reformat the more common wide data format (i.e., each row corresponds to a different individual and repeated measures are new variables) into the long data format (i.e., each row corresponds to a different repeated measure with multiple rows per person). We can use the `pivot_longer()` function from the [**tidyr**](https://tidyr.tidyverse.org/) package (alternatives include `melt()` from the [**reshape**](https://cran.r-project.org/web/packages/reshape2/index.html) package). We will collect all the columns that begin with the string `dlpfc` and pass the values into one column, while creating a new column `wave` from their number indices (e.g., `1` for `dlpfc1`). We can then use the `mutate()` function from the [**dplyr**](https://dplyr.tidyverse.org/) package to change the wave colum from a character to a numeric variable and subtract $1$ from every value so that the first wave is coded as $0$ (this will be important for interpretations later).
 
 Details regarding these datasets can be found in [Datasets](#datasets). However, shortly, the `executive-function.csv` file contains data for 342 adolescents measured up to 5 times. At each wave, adolescents played an executive function task while in an fMRI scanner. For now, we will only use the DLPFC measures to build the canonical growth models. The first 5 individuals are shown below. These data are in wide format.
 
@@ -92,7 +92,7 @@ download_file(
 
 For readers interested in how to automate running **Mplus** models through **R**, please consult the extrememly useful functions in [**MplusAutomation**](https://michaelhallquist.github.io/MplusAutomation/articles/vignette.html) that allow you to generate syntax, run saved input files, and re-import **Mplus** models into the R environment. Please note that a local **Mplus** license is still necessary to run these models.
 
-We can also use the package [**foreign**]() to write out the data to a **SAS** compatible text file. The `write.foreign()` function also outputs a syntax file that imports the data into the **SAS** environment. 
+We can also use the package [**foreign**](https://cran.r-project.org/web/packages/foreign/index.html) to write out the data to a **SAS** compatible text file. The `write.foreign()` function also outputs a syntax file that imports the data into the **SAS** environment. 
 
 ```{r, write to sas 02, message = FALSE, warning = FALSE, error = FALSE}
 foreign::write.foreign(executive.function.long, 
@@ -118,11 +118,11 @@ download_file(
 
 ## Multilevel Model
 
-We will start with the multilevel growth model using our `executive.function` data. There are a number of package options to fit multilevel models, but we will focus here on two of the most popular: [**nlme**]() and [**lme4**](). We will also use the [**lmerTest**]() package which outputs *p*-values for the tests, which are not included in the **lme4** package. We will fit a very simple linear model with a random intercept and slope for the DLPFC activation data using all of these packages. For these initial models, we will mostly use `wave` as our metric of time rather than `age` for simplicity. We will return to models which use different time variables in later sections.
+We will start with the multilevel growth model using our `executive.function` data. There are a number of package options to fit multilevel models, but we will focus here on two of the most popular: [**nlme**](https://cran.r-project.org/web/packages/nlme/index.html) and [**lme4**](https://cran.r-project.org/web/packages/lme4/index.html). We will also use the [**lmerTest**](https://cran.r-project.org/web/packages/lmerTest/index.html) package which outputs *p*-values for the tests, which are not included in the **lme4** package. We will fit a very simple linear model with a random intercept and slope for the DLPFC activation data using all of these packages. For these initial models, we will mostly use `wave` as our metric of time rather than `age` for simplicity. We will return to models which use different time variables in later sections.
 
 ### nlme
 
-The **nlme** function `lme()` separates its syntax into a `fixed` and `random` argument using the standard `glm()` syntax common to **R**. In the `random` argument, we indicate that the random intercept (`1`) and random slope (`wave`) are nested within `id` using the pipe (`|`) character. We will indicate that rows with missing data will be omitted using `na.action = na.omit` and set the estimator to REstricted Maximum Likelihood (REML). For a discussion of REML versus Full Information Maximum Likelihood (FIML; set `method = "ML"`), see more information [here](). Once the model is finished running, we can print the model output to the console using the `summary()` function. Here we use the argument `correlation=FALSE` to suppress the correlation of fixed effects output, which is unlikely to be of interest to applied researchers.
+The **nlme** function `lme()` separates its syntax into a `fixed` and `random` argument using the standard `glm()` syntax common to **R**. In the `random` argument, we indicate that the random intercept (`1`) and random slope (`wave`) are nested within `id` using the pipe (`|`) character. We will indicate that rows with missing data will be omitted using `na.action = na.omit` and set the estimator to REstricted Maximum Likelihood (REML). For a discussion of REML versus Full Information Maximum Likelihood (FIML; set `method = "ML"`), see more information [here](https://www.tandfonline.com/doi/abs/10.1080/00273171.2017.1344538). Once the model is finished running, we can print the model output to the console using the `summary()` function. Here we use the argument `correlation=FALSE` to suppress the correlation of fixed effects output, which is unlikely to be of interest to applied researchers.
 
 ```{r canonical MLM 01, warning = FALSE, message = FALSE}
 mlm.nlme <- nlme::lme(dlpfc ~ 1 + wave,
@@ -170,7 +170,7 @@ summary(mlm.lmerTest, correlation=FALSE)
 
 ### MLM Outputs
 
-The `summary()` function output, while extensive, is not formatted for publication. However, we can use a great function `tab_model()` from the [**sjPlot**]() package to generate publication-quality tables from the MLM output. Here we will merge the results from the **nlme** and **lmerTest** packages.
+The `summary()` function output, while extensive, is not formatted for publication. However, we can use a great function `tab_model()` from the [**sjPlot**](https://strengejacke.github.io/sjPlot/) package to generate publication-quality tables from the MLM output. Here we will merge the results from the **nlme** and **lmerTest** packages.
 
 ```{r canonical MLM 04, warning = FALSE, message = FALSE}
 sjPlot::tab_model(mlm.nlme, mlm.lmerTest,
@@ -188,7 +188,7 @@ If we wish, we can output the table into a file that we can use to incorporate i
 
 ### MLM Plotting Model-Implied Trajectories
 
-If we want to plot the model-implied trajectories for each individual, we can use the [**ggplot2**]() package. To plot data, we need to have it in long format. Fortunately this is the format used in the MLM model so we don"t need to do anything additional. We will plot predicted values generated from the `predict()` function. While we could append these values to our `executive.function.long` dataframe in a separate step, we will instead generate the values locally within the `ggplot()` function. This will save us a step and we won"t have to deal with merging the predicted values into our dataframe or having to remove those values later. Because MLMs drop `NA` values, our predicted values will not match up to the original dataframe unless we also drop thos `NA` values, so we will use the `drop_na()` function from **tidyr**.
+If we want to plot the model-implied trajectories for each individual, we can use the [**ggplot2**](https://ggplot2.tidyverse.org/) package. To plot data, we need to have it in long format. Fortunately this is the format used in the MLM model so we don"t need to do anything additional. We will plot predicted values generated from the `predict()` function. While we could append these values to our `executive.function.long` dataframe in a separate step, we will instead generate the values locally within the `ggplot()` function. This will save us a step and we won"t have to deal with merging the predicted values into our dataframe or having to remove those values later. Because MLMs drop `NA` values, our predicted values will not match up to the original dataframe unless we also drop thos `NA` values, so we will use the `drop_na()` function from **tidyr**.
 
 ```{r canonical MLM 05, warning = FALSE, message = FALSE}
 ggplot2::ggplot(tidyr::drop_na(executive.function.long), 
@@ -207,64 +207,56 @@ We can see that there is quite a bit of individual differences both in the initi
 
 ## Generalized Additive Mixed Model
 
-We can move on to fitting a GAMM model. Unlike the other frameworks, we will use the `feedbacklearn` data with continuous age in this model. We could, in theory, fit the `executive.function` data, but that would largely be a waste of the GAMM framework"s potential for longitudinal analysis. 
+We can move on to fitting a GAMM model. Unlike the other frameworks, we will use the `feedbacklearn` data with continuous age across 2 decades in this model. We could, in theory, fit the `executive.function` data, but that would largely be a waste of the GAMM framework"s potential for longitudinal analysis. Here we will utilize the [**gamm4**](https://cran.r-project.org/web/packages/gamm4/index.html) package for fitting GAMMs with the `gamm4()` function, although other options (e.g., `gamm()` or `gam()` from the [**mgcv**](https://cran.r-project.org/web/packages/mgcv/index.html) package). Fortunately, the `gamm4()` uses syntax that we are largely familiar with from fitting the MLMs in the prior section. Here we will begin by fitting a simple smooth function for values of network modularity across age. Note here that we standardize the modularity values since the natural scale results in very small variance components, and the units of modularity are not naturally meaningful anyways. To invoke the smoothing function, we wrap the `age` predictor with the `s()` function in the formula. Note that the random effects argument resembles the **nlme** syntax. For now we will allow many of the defaults to kick in, but will investigate them in turn.
 
 ```{r canonical GAMM 01, warning = FALSE, message = FALSE}
-gamm <- gamm4::gamm4(modularity ~ 1 + s(age),
+gamm <- gamm4::gamm4(scale(modularity) ~ 1 + s(age),
                      random = ~ (1 | id),
                      data = feedback.learning)
-summary(gamm$mer)
+```
+
+Unlike the MLM models, the GAMM results in two sets of model results from linear and nonlinear parts of the model. To access the linear model we need to specify the `mer` part of the model output. 
+
+```{r}
+summary(gamm$mer, correlation = FALSE)
+```
+
+We will ignore the `Fixed effects:` portion of the output for now because our main effect of interest is the nonlinear smooth of age and we did not include additional linear effects (we will see this more later). Focusing on the `Random effects:`, we can see that there is a little more person-to-person variability (`Groups = id`, `Name = (Intercept)`) than within-person variability (`Groups = Residual`), but they are roughly equivalent. Note that we have an "extra" random effect (`Groups = Xr`, `Name = s(age)`). Although this might lead us to believe that we have included a random within-person slope, but it is a formulation of the smooth itself as a random effect and is not terribly informative here. We *could* include a true random effect of age by expanding the formula in the `random` argument (`random = ~ (1 + age | id)`), but that model is not identified in this data and so we won't.
+
+We can then take a look at the nonlinear portion of the output by summarizing the `gam` portion of the model.
+
+```{r}
 summary(gamm$gam)
-coef(gamm$gam)
-
-
-testgamm <- gamm(modularity ~ s(age), random=list(id=~1), data=feedback.learning)
-```
-```{r canonical GAMM 02, warning = FALSE, message = FALSE, results="asis", eval=FALSE}
-gamtabs(gamm$gam, 
-        type = "html",
-        caption = "Modularity as a Function of Age")
-```
-```{r canonical GAMM 03, warning = FALSE, message = FALSE}
-plot(gamm$gam, se = TRUE, shade = TRUE, rug = TRUE, 
-     main = "Canonical GAMM Smooth",
-     xlab = "Age", ylab = "Modularity")
 ```
 
-```{r canonical GAMM 04, warning = FALSE, message = FALSE,  eval=FALSE}
-feedback.learning$id <- factor(feedback.learning$id)
-gamm.mcgv <- mgcv::gam(modularity ~ 1 + s(age) + s(id, bs="re"), 
-                       data=feedback.learning)
-summary(gamm.mcgv)
-coef(gamm.mcgv)
-plot_smooth(gamm.mcgv, view = "age", rm.ranef = TRUE, rug=TRUE,
-            main = "Canonical GAMM Smooth",
-            xlab = "Age", ylab = "Modularity")
-plot(gamm.mcgv)
+As before, we will mostly ignore the `Parametric coefficients:` portion (although see that the `(Intercept)` estimate is identical; this should be of concern if this wasn't the case). The `Approximate significance of smooth terms:` portion shows that we have a significant effect of age with a estimated degrees of freedom (EDF) of $4.65$. The EDF give us a shrunken estimate of the smooth complexity (higher values indicate greater complexity). However, this isn't incredibly helpful to understand the nature of the developmental effect. Instead, let's turn to the output options and see what we can find there.
+
+### GAMM Outputs
+
+Just like with MLMs, we can generate pretty tables instead of just manually typing out the console output into a word processor. We can use the `tab_model()` for the `mer` part of the output, but we need to call the `gamtabs()` function from the [**itsadug**](https://cran.r-project.org/web/packages/itsadug/index.html) package for the `gam` section.
+
+```{r canonical GAMM 02, warning = FALSE, message = FALSE, results="asis"}
+itsadug::gamtabs(gamm$gam, type = "html",
+                 pnames = c("Intercept"), snames = c("s(Age)"),
+                 caption = "Modularity as a Function of Age")
 ```
 
-```{r, eval=FALSE}
-gamm.mcgv2 <- mgcv::gam(modularity ~ 1 + s(age, k=3) + s(id, bs="re"), 
-                        data=feedback.learning)
-plot_smooth(gamm.mcgv2, view = "age", rm.ranef = TRUE, rug=TRUE,
-            main = "Canonical GAMM Smooth with 3 Basis Functions",
-            xlab = "Age", ylab = "Modularity")
+To visualize the results, we can call the `plot.gam()` function from the **mgcv** package (which aliases as `plot()` when the **mgcv** package is loaded). We can include the standard errors and a rug plot to show the individual age observations in our data. This can help us identify regions of the estimated trajectory that are more or less supported by the data in addition to the standard error width.
 
-gamm.mcgv3 <- mgcv::gam(modularity ~ 1 + s(age, k=20) + s(id, bs="re"),
-                        data=feedback.learning)
-plot_smooth(gamm.mcgv3, view = "age", rm.ranef = TRUE, rug=TRUE,
-            main = "Canonical GAMM Smooth with 20 Basis Functions",
-            xlab = "Age", ylab = "Modularity")
-coef(gamm.mcgv3)
+```{r}
+mgcv::plot.gam(gamm$gam, se = TRUE, rug = TRUE, shade = TRUE,
+               xlab = "Age", ylab = "Fitted Modularity Values")
 ```
+
+The resulting plot tells a rather interesting story about the developmental trajectory of modularity, with initial increases across early adolescence, a plateauing in mid-adolescence, and then slow declines into young adulthood. However, we can see there is a lot more uncertainty at the later ages (indicated by the sparsity in the hashes in the rug plot).
 
 ## Latent Curve Model
 
-We will now turn to the longitudinal modeling within the SEM framework, beginning with the latent curve model (or latent growth model; quantitative people aren"t the best with consistent terminology sometimes). Unlike with the mixed-effects models, we will focus on a single package, [**lavaan**](), which has become the workhorse of structural equation modeling natively in **R** (for running SEMs in **Mplus** using **R** commands, see the **MplusAutomation** package). Like with the MLM, we will fit a simple linear growth model using `wave` as our metric of time. However, unlike with the MLM, time will not appear as a specific variable in the model; rather we code time measurements directly into the factor loadings. 
+We will now turn to the longitudinal modeling within the SEM framework, beginning with the latent curve model (or latent growth model; quantitative people aren"t the best with consistent terminology sometimes). Unlike with the mixed-effects models, we will focus on a single package, [**lavaan**](https://lavaan.ugent.be/), which has become the workhorse of structural equation modeling natively in **R** (for running SEMs in **Mplus** using **R** commands, see the **MplusAutomation** package). Like with the MLM, we will fit a simple linear growth model using `wave` as our metric of time. However, unlike with the MLM, time will not appear as a specific variable in the model; rather we code time measurements directly into the factor loadings. 
 
 ### LCM Syntax and Model Fitting
 
-First we will define a model syntax object that specifies the model. While we will cover the basics here, consult the [**lavaan website**]() for a more complete syntax tutorial.
+First we will define a model syntax object that specifies the model. While we will cover the basics here, consult the [**lavaan website**](https://lavaan.ugent.be/tutorial/syntax1.html) for a more complete syntax tutorial.
 
 ```{r canonical LCM 01}
 linear.lcm <- "
@@ -336,7 +328,7 @@ Next we have the factor variances and the indicator residual (again denoted with
 
 Finally, we have the `R-Square:` section where the proportion of variance explained in each of the endogenous variables (here just the indicators but this could contain other endogenous observed or latent variables in other models). Conveniently, this is simply $1$ minus the standardized residual variance for each item. 
 
-We can output these parameters in a slightly more compact format using the `tidy()` function from the [**broom**]() package and pass it to the `kable()` function from the [**kableExtra**]() package to output a table in the `"html"` format. If we were writing a manuscript, we might alternatively wish to output the rmarkdown in PDF form and use the `format = "latex"` argument.
+We can output these parameters in a slightly more compact format using the `tidy()` function from the [**broom**](https://cran.r-project.org/web/packages/broom/vignettes/broom.html) package and pass it to the `kable()` function from the [**kableExtra**](https://cran.r-project.org/web/packages/kableExtra/vignettes/awesome_table_in_html.html) package to output a table in the `"html"` format. If we were writing a manuscript, we might alternatively wish to output the rmarkdown in PDF form and use the `format = "latex"` argument.
 
 ```{r canonical LCM 06}
 broom::tidy(lcm) %>% 
@@ -356,7 +348,7 @@ broom::tidy(lcm) %>%
 
 ### LCM Path Diagrams
 
-We might also wish to generate a diagram visualization of the LCM model, either for model checking or for presenting results. We can use the `semPaths()` function from the [**semPlot**]() package to do just that. Here we will plot the model results including the intercepts and with black paths. The `what` argument we will set to `"est"` to scale the size of the paths to the parameter estimate.
+We might also wish to generate a diagram visualization of the LCM model, either for model checking or for presenting results. We can use the `semPaths()` function from the [**semPlot**](http://sachaepskamp.com/semPlot/examples) package to do just that. Here we will plot the model results including the intercepts and with black paths. The `what` argument we will set to `"est"` to scale the size of the paths to the parameter estimate.
 
 ```{r canonical LCM 07}
 semPlot::semPaths(lcm,
