--- a/external/hitchhikers-guide-packages.bib
+++ b/external/hitchhikers-guide-packages.bib
@@ -64,12 +64,37 @@ Systat, Weka, dBase, ...},
   url = {https://CRAN.R-project.org/package=gamm4},
 }
 
+@Manual{R-ggeffects,
+  title = {ggeffects: Create Tidy Data Frames of Marginal Effects for ggplot from
+Model Outputs},
+  author = {Daniel Lüdecke},
+  year = {2021},
+  note = {R package version 1.1.1},
+  url = {https://strengejacke.github.io/ggeffects/},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2021},
   note = {R package version 3.3.5},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-interactions,
+  title = {interactions: Comprehensive, User-Friendly Toolkit for Probing Interactions},
+  author = {Jacob A. Long},
+  year = {2021},
+  note = {R package version 1.1.5},
+  url = {https://interactions.jacob-long.com},
+}
+
+@Manual{R-itsadug,
+  title = {itsadug: Interpreting Time Series and Autocorrelated Data Using GAMMs},
+  author = {Jacolien {van Rij} and Martijn Wieling and R. Harald Baayen},
+  year = {2020},
+  note = {R package version 2.4},
+  url = {https://CRAN.R-project.org/package=itsadug},
 }
 
 @Manual{R-kableExtra,
@@ -144,6 +169,15 @@ Analyses in Mplus},
   year = {2021},
   note = {R package version 3.1-153},
   url = {https://svn.r-project.org/R-packages/trunk/nlme/},
+}
+
+@Manual{R-plotfunctions,
+  title = {plotfunctions: Various Functions to Facilitate Visualization of Data and
+Analysis},
+  author = {Jacolien {van Rij}},
+  year = {2020},
+  note = {R package version 1.4},
+  url = {https://jacolienvanrij.com/tutorials.html},
 }
 
 @Manual{R-purrr,
@@ -227,6 +261,17 @@ Output},
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Article{ggeffects2018,
+  title = {ggeffects: Tidy Data Frames of Marginal Effects from Regression Models.},
+  volume = {3},
+  doi = {10.21105/joss.00772},
+  number = {26},
+  journal = {Journal of Open Source Software},
+  author = {Daniel Lüdecke},
+  year = {2018},
+  pages = {772},
 }
 
 @Book{ggplot22016,
